<resources>
    <string name="app_name">ProjectA</string>
    <string name="learnerscore">TextView</string>
    <string name="learnername">Pharis Mughal</string>
    <string name="LeaderName">Leader Name</string>
    <string name="SkillName">Skill Name</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="submit">SUBMIT</string>
    <string name="learningleaders">Learning Leaders</string>
    <string name="skilliqleaders">Skill IQ Leaders</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="email_address">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submission_unsuccessful">Submission UnSuccessful</string>
    <string name="image">Image</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="yes">Yes</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="project_submission">Project Submission</string>
</resources>