<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="10dp">


    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="370dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <EditText
            android:id="@+id/firstname"
            android:layout_width="187dp"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="319dp"
            android:background="@drawable/textview"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:padding="3dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="200dp"
            android:layout_height="46dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="319dp"
            android:background="@drawable/textview"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="3dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/emailaddress"
            android:layout_width="392dp"
            android:layout_height="47dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="185dp"
            android:background="@drawable/textview"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="" />

        <EditText
            android:id="@+id/linkgithub"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="66dp"
            android:background="@drawable/textview"
            android:gravity="start|top"
            android:hint="@string/project_on_github_link"
            android:inputType="textMultiLine"
            android:padding="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.013"
            android:autofillHints="" />
    </RelativeLayout>

    <Button
        android:id="@+id/submitProjectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:background="@drawable/buttonsubmit"
        android:padding="10dp"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="326dp"
        android:layout_height="58dp"
        android:fontFamily="@font/archivo_black"
        android:padding="10dp"
        android:text="@string/project_submission"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="257dp"
        android:layout_height="86dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054"
        app:srcCompat="@drawable/gads"
        android:contentDescription="@string/image" />

    <ImageButton
        android:id="@+id/returnButton"
        android:layout_width="137dp"
        android:layout_height="38dp"
        android:layout_marginEnd="28dp"
        android:background="#101010"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063"
        app:srcCompat="@drawable/baseline"
        android:contentDescription="@string/image" />
</androidx.constraintlayout.widget.ConstraintLayout>