<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="383dp"
        android:layout_height="132dp"
        android:layout_marginTop="16dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:id="@+id/topLearnerImage"
                android:layout_width="113dp"
                android:layout_height="103dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/toplearner"
                android:contentDescription="@string/image" />

            <TextView
                android:id="@+id/leader_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="123dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="57dp"
                android:text="@string/learnername"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/leader_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="123dp"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="11dp"
                android:layout_marginBottom="21dp"
                android:text="@string/learnerscore"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>