<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/confirmSubmitCardView"
        android:layout_width="294dp"
        android:layout_height="156dp"
        android:layout_margin="40dp"
        android:padding="8dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="292dp"
            android:layout_height="166dp">

            <ImageButton
                android:id="@+id/cancelSubmissionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/cancelbutton"
                android:backgroundTint="#504A4A"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
                android:contentDescription="@string/image" />

            <TextView
                android:id="@+id/textConfirmation"
                android:layout_width="148dp"
                android:layout_height="47dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="43dp"
                android:layout_marginTop="43dp"
                android:layout_marginEnd="101dp"
                android:layout_marginBottom="76dp"
                android:fontFamily="sans-serif-black"
                android:padding="2dp"
                android:text="@string/are_you_sure"
                android:textAlignment="center"
                android:textColor="#0B0909"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/confirmationButton"
                android:layout_width="75dp"
                android:layout_height="44dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="94dp"
                android:layout_marginTop="103dp"
                android:layout_marginEnd="123dp"
                android:layout_marginBottom="19dp"
                android:background="@drawable/plainbutton"
                android:text="@string/yes"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/questionMark"
                android:layout_width="64dp"
                android:layout_height="78dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="156dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="72dp"
                android:layout_marginBottom="67dp"
                app:srcCompat="@android:drawable/ic_menu_help"
                android:contentDescription="@string/image" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>

